termporary fix to remove horizontal scrollbar from firefox in th points list popup

--- a/src/views/style/popup.css
+++ b/src/views/style/popup.css
@@ -24,6 +24,7 @@ body::-webkit-scrollbar {
 html {
     min-width: 350px;
     min-height: 600px;
+    overflow-x: hidden;
 }
 
 .header {
